<resources>
    <string name="app_name">Cats</string>
    <string name="toolbar_detail_fragment_text">Here I am</string>
    <string name="image_description">picture with a cat</string>
    <string name="load_state_item_error_text">The server is not responding</string>
    <string name="load_state_retry_button_text">RETRY</string>
    <string name="save_button_text">SAVE</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="permission_not_granted">Permission not granted, so image can\'t be saved in storage.</string>
    <string name="saved_successfully">Image saved successfully %s</string>
    <string name="unable_access">Unable to access the storage</string>
</resources>